@startuml
hide circle
skinparam classAttributeIconSize 0

class Usuario {
    +int idUsuario
    +string nombre
    +string correo
    +string contrasena
    +DateTime fechaRegistro
    +string estado
}

class Rol {
    +int idRol
    +string nombre
}

class UsuarioRol {
    +int idUsuarioRol
    +int idUsuario
    +int idRol
}

class Concurso {
    +int idConcurso
    +string nombre
    +string descripcion
    +DateTime fechaInicio
    +int duracionMinutos
    +string contrasena
    +string urlSetProblemas
    +int minutosCongelamiento
    +string codigo
    +string estado
    +int idUsuarioCreador
}

class Problema {
    +int idProblema
    +char inciso
    +string titulo
    +float tiempo
    +int memoria
    +string colorGlobo
    +string estado
    +int idConcurso
}

class CasoPrueba {
    +int idCasoPrueba
    +string entrada
    +string salida
    +string estado
    +int idProblema
}

class Lenguaje {
    +int idLenguaje
    +int idJudge0
    +string nombre
    +string extension
    +string estado
}

class Envio {
    +int idEnvio
    +string codigo
    +string resultado
    +float tiempo
    +int memoria
    +string token
    +string upsolving
    +DateTime fechaEnvio
    +int idUsuario
    +int idProblema
    +int idLenguaje
}

class ParticipanteConcurso {
    +int idParticipanteConcurso
    +DateTime fechaIngreso
    +string estado
    +int idUsuario
    +int idConcurso
}

'=========================
' Relaciones
'=========================

Usuario "1" -- "0..*" Concurso : crea

Concurso "1" -- "1..*" Problema : contiene

Problema "1" -- "1..*" CasoPrueba : posee

Usuario "1" -- "0..*" Envio : realiza

Problema "1" -- "0..*" Envio : recibe

Lenguaje "1" -- "0..*" Envio : utilizado

Usuario "1" -- "0..*" ParticipanteConcurso

Concurso "1" -- "0..*" ParticipanteConcurso

Usuario "1" -- "0..*" UsuarioRol

Rol "1" -- "0..*" UsuarioRol

@enduml